corpus/kernel/6.8/gpu/drivers.md
---
collection: kernel
version: "6.8"
title: "GPU Driver Documentation"
source_url: https://www.kernel.org/doc/html/v6.8/gpu/drivers.html
fetched_at: 2026-08-21T03:47:59+00:00
---
# GPU Driver Documentation

- [drm/amdgpu AMDgpu driver](amdgpu/index.md)
  - [Module Parameters](amdgpu/module-parameters.md)
  - [Core Driver Infrastructure](amdgpu/driver-core.md)
    - [GPU Hardware Structure](amdgpu/driver-core.md#gpu-hardware-structure)
    - [Driver Structure](amdgpu/driver-core.md#driver-structure)
    - [Memory Domains](amdgpu/driver-core.md#memory-domains)
    - [Buffer Objects](amdgpu/driver-core.md#buffer-objects)
    - [PRIME Buffer Sharing](amdgpu/driver-core.md#prime-buffer-sharing)
    - [MMU Notifier](amdgpu/driver-core.md#mmu-notifier)
    - [AMDGPU Virtual Memory](amdgpu/driver-core.md#amdgpu-virtual-memory)
    - [Interrupt Handling](amdgpu/driver-core.md#interrupt-handling)
    - [IP Blocks](amdgpu/driver-core.md#ip-blocks)
  - [drm/amd/display - Display Core (DC)](amdgpu/display/index.md)
    - [AMDgpu Display Manager](amdgpu/display/display-manager.md)
    - [Display Core Debug tools](amdgpu/display/dc-debug.md)
    - [Display Core Next (DCN)](amdgpu/display/dcn-overview.md)
    - [Multiplane Overlay (MPO)](amdgpu/display/mpo-overview.md)
    - [DC Glossary](amdgpu/display/dc-glossary.md)
  - [dGPU firmware flashing](amdgpu/flashing.md)
    - [IFWI](amdgpu/flashing.md#ifwi)
    - [USB-C PD F/W](amdgpu/flashing.md#usb-c-pd-f-w)
    - [sysfs files](amdgpu/flashing.md#sysfs-files)
  - [AMDGPU XGMI Support](amdgpu/xgmi.md)
  - [AMDGPU RAS Support](amdgpu/ras.md)
    - [RAS debugfs/sysfs Control and Error Injection Interfaces](amdgpu/ras.md#ras-debugfs-sysfs-control-and-error-injection-interfaces)
    - [RAS Reboot Behavior for Unrecoverable Errors](amdgpu/ras.md#ras-reboot-behavior-for-unrecoverable-errors)
    - [RAS Error Count sysfs Interface](amdgpu/ras.md#ras-error-count-sysfs-interface)
    - [RAS EEPROM debugfs Interface](amdgpu/ras.md#ras-eeprom-debugfs-interface)
    - [RAS VRAM Bad Pages sysfs Interface](amdgpu/ras.md#ras-vram-bad-pages-sysfs-interface)
    - [Sample Code](amdgpu/ras.md#sample-code)
  - [GPU Power/Thermal Controls and Monitoring](amdgpu/thermal.md)
    - [HWMON Interfaces](amdgpu/thermal.md#hwmon-interfaces)
    - [GPU sysfs Power State Interfaces](amdgpu/thermal.md#gpu-sysfs-power-state-interfaces)
    - [GFXOFF](amdgpu/thermal.md#gfxoff)
  - [Misc AMDGPU driver information](amdgpu/driver-misc.md)
    - [GPU Product Information](amdgpu/driver-misc.md#gpu-product-information)
    - [GPU Memory Usage Information](amdgpu/driver-misc.md#gpu-memory-usage-information)
    - [PCIe Accounting Information](amdgpu/driver-misc.md#pcie-accounting-information)
    - [GPU SmartShift Information](amdgpu/driver-misc.md#gpu-smartshift-information)
  - [AMDGPU Glossary](amdgpu/amdgpu-glossary.md)
- [drm/i915 Intel GFX Driver](i915.md)
  - [Core Driver Infrastructure](i915.md#core-driver-infrastructure)
    - [Runtime Power Management](i915.md#runtime-power-management)
    - [Interrupt Handling](i915.md#interrupt-handling)
    - [Intel GVT-g Guest Support(vGPU)](i915.md#intel-gvt-g-guest-support-vgpu)
    - [Intel GVT-g Host Support(vGPU device model)](i915.md#intel-gvt-g-host-support-vgpu-device-model)
    - [Workarounds](i915.md#workarounds)
  - [Display Hardware Handling](i915.md#display-hardware-handling)
    - [Mode Setting Infrastructure](i915.md#mode-setting-infrastructure)
    - [Frontbuffer Tracking](i915.md#frontbuffer-tracking)
    - [Display FIFO Underrun Reporting](i915.md#display-fifo-underrun-reporting)
    - [Plane Configuration](i915.md#plane-configuration)
    - [Atomic Plane Helpers](i915.md#atomic-plane-helpers)
    - [Asynchronous Page Flip](i915.md#asynchronous-page-flip)
    - [Output Probing](i915.md#output-probing)
    - [Hotplug](i915.md#hotplug)
    - [High Definition Audio](i915.md#high-definition-audio)
    - [Intel HDMI LPE Audio Support](i915.md#intel-hdmi-lpe-audio-support)
    - [Panel Self Refresh PSR (PSR/SRD)](i915.md#panel-self-refresh-psr-psr-srd)
    - [Frame Buffer Compression (FBC)](i915.md#frame-buffer-compression-fbc)
    - [Display Refresh Rate Switching (DRRS)](i915.md#display-refresh-rate-switching-drrs)
    - [DPIO](i915.md#dpio)
    - [DMC Firmware Support](i915.md#dmc-firmware-support)
    - [Video BIOS Table (VBT)](i915.md#video-bios-table-vbt)
    - [Display clocks](i915.md#display-clocks)
    - [Display PLLs](i915.md#display-plls)
    - [Display State Buffer](i915.md#display-state-buffer)
  - [GT Programming](i915.md#gt-programming)
    - [Multicast/Replicated (MCR) Registers](i915.md#multicast-replicated-mcr-registers)
  - [Memory Management and Command Submission](i915.md#memory-management-and-command-submission)
    - [Intel GPU Basics](i915.md#intel-gpu-basics)
    - [Locking Guidelines](i915.md#locking-guidelines)
    - [GEM BO Management Implementation Details](i915.md#gem-bo-management-implementation-details)
    - [Buffer Object Eviction](i915.md#buffer-object-eviction)
    - [Buffer Object Memory Shrinking](i915.md#buffer-object-memory-shrinking)
    - [Batchbuffer Parsing](i915.md#batchbuffer-parsing)
    - [User Batchbuffer Execution](i915.md#user-batchbuffer-execution)
    - [Scheduling](i915.md#scheduling)
    - [Logical Rings, Logical Ring Contexts and Execlists](i915.md#logical-rings-logical-ring-contexts-and-execlists)
    - [Global GTT views](i915.md#global-gtt-views)
    - [GTT Fences and Swizzling](i915.md#gtt-fences-and-swizzling)
    - [Object Tiling IOCTLs](i915.md#object-tiling-ioctls)
    - [Protected Objects](i915.md#protected-objects)
  - [Microcontrollers](i915.md#microcontrollers)
    - [WOPCM](i915.md#wopcm)
    - [GuC](i915.md#guc)
    - [HuC](i915.md#huc)
    - [DMC](i915.md#dmc)
  - [Tracing](i915.md#tracing)
    - [i915_ppgtt_create and i915_ppgtt_release](i915.md#i915-ppgtt-create-and-i915-ppgtt-release)
    - [i915_context_create and i915_context_free](i915.md#i915-context-create-and-i915-context-free)
  - [Perf](i915.md#perf)
    - [Overview](i915.md#overview)
    - [Comparison with Core Perf](i915.md#comparison-with-core-perf)
    - [i915 Driver Entry Points](i915.md#i915-driver-entry-points)
    - [i915 Perf Stream](i915.md#i915-perf-stream)
    - [i915 Perf Observation Architecture Stream](i915.md#i915-perf-observation-architecture-stream)
    - [Other i915 Perf Internals](i915.md#other-i915-perf-internals)
  - [Style](i915.md#style)
    - [Register macro definition style](i915.md#register-macro-definition-style)
  - [i915 DRM client usage stats implementation](i915.md#i915-drm-client-usage-stats-implementation)
- [drm/imagination PowerVR Graphics Driver](imagination/index.md)
  - [Contents](imagination/index.md#contents)
    - [UAPI](imagination/uapi.md)
- [drm/mcde ST-Ericsson MCDE Multi-channel display engine](mcde.md)
- [drm/meson AmLogic Meson Video Processing Unit](meson.md)
  - [Video Processing Unit](meson.md#video-processing-unit)
  - [Video Input Unit](meson.md#video-input-unit)
  - [Video Post Processing](meson.md#video-post-processing)
  - [Video Encoder](meson.md#video-encoder)
  - [Video Clocks](meson.md#video-clocks)
  - [HDMI Video Output](meson.md#hdmi-video-output)
- [drm/pl111 ARM PrimeCell PL110 and PL111 CLCD Driver](pl111.md)
- [drm/tegra NVIDIA Tegra GPU and display driver](tegra.md)
  - [Driver Infrastructure](tegra.md#driver-infrastructure)
    - [Host1x Infrastructure Reference](tegra.md#host1x-infrastructure-reference)
    - [Host1x Syncpoint Reference](tegra.md#host1x-syncpoint-reference)
  - [KMS driver](tegra.md#kms-driver)
    - [Display Controllers](tegra.md#display-controllers)
    - [Outputs](tegra.md#outputs)
  - [Userspace Interface](tegra.md#userspace-interface)
    - [GEM Buffers](tegra.md#gem-buffers)
    - [Syncpoints](tegra.md#syncpoints)
    - [Command Stream Submission](tegra.md#command-stream-submission)
- [drm/tve200 Faraday TV Encoder 200](tve200.md)
- [drm/v3d Broadcom V3D Graphics Driver](v3d.md)
  - [GPU buffer object (BO) management](v3d.md#gpu-buffer-object-bo-management)
    - [Address space management](v3d.md#address-space-management)
    - [GPU Scheduling](v3d.md#gpu-scheduling)
  - [Interrupts](v3d.md#interrupts)
- [drm/vc4 Broadcom VC4 Graphics Driver](vc4.md)
  - [Display Hardware Handling](vc4.md#display-hardware-handling)
    - [Pixel Valve (DRM CRTC)](vc4.md#pixel-valve-drm-crtc)
    - [HVS](vc4.md#hvs)
    - [HVS planes](vc4.md#hvs-planes)
    - [HDMI encoder](vc4.md#hdmi-encoder)
    - [DSI encoder](vc4.md#dsi-encoder)
    - [DPI encoder](vc4.md#dpi-encoder)
    - [VEC (Composite TV out) encoder](vc4.md#vec-composite-tv-out-encoder)
  - [KUnit Tests](vc4.md#kunit-tests)
  - [Memory Management and 3D Command Submission](vc4.md#memory-management-and-3d-command-submission)
    - [GPU buffer object (BO) management](vc4.md#gpu-buffer-object-bo-management)
    - [V3D binner command list (BCL) validation](vc4.md#v3d-binner-command-list-bcl-validation)
    - [V3D render command list (RCL) generation](vc4.md#v3d-render-command-list-rcl-generation)
    - [Shader validator for VC4](vc4.md#shader-validator-for-vc4)
    - [V3D Interrupts](vc4.md#v3d-interrupts)
- [drm/vkms Virtual Kernel Modesetting](vkms.md)
  - [Setup](vkms.md#setup)
  - [Testing With IGT](vkms.md#testing-with-igt)
  - [TODO](vkms.md#todo)
    - [IGT better support](vkms.md#igt-better-support)
    - [Add Plane Features](vkms.md#add-plane-features)
    - [Runtime Configuration](vkms.md#runtime-configuration)
    - [Writeback support](vkms.md#writeback-support)
    - [Output Features](vkms.md#output-features)
    - [CRC API Improvements](vkms.md#crc-api-improvements)
    - [Atomic Check using eBPF](vkms.md#atomic-check-using-ebpf)
- [drm/bridge/dw-hdmi Synopsys DesignWare HDMI Controller](bridge/dw-hdmi.md)
  - [Synopsys DesignWare HDMI Controller](bridge/dw-hdmi.md#synopsys-designware-hdmi-controller)
    - [Supported Input Formats and Encodings](bridge/dw-hdmi.md#supported-input-formats-and-encodings)
- [drm/xen-front Xen para-virtualized frontend driver](xen-front.md)
  - [Driver modes of operation in terms of display buffers used](xen-front.md#driver-modes-of-operation-in-terms-of-display-buffers-used)
    - [Buffers allocated by the frontend driver](xen-front.md#buffers-allocated-by-the-frontend-driver)
    - [Buffers allocated by the backend](xen-front.md#buffers-allocated-by-the-backend)
  - [Driver limitations](xen-front.md#driver-limitations)
- [drm/xe Intel GFX Driver](xe/index.md)
  - [Memory Management](xe/xe_mm.md)
    - [BO management](xe/xe_mm.md#bo-management)
    - [BO creation](xe/xe_mm.md#bo-creation)
    - [BO validation](xe/xe_mm.md#bo-validation)
    - [BO eviction / moving](xe/xe_mm.md#bo-eviction-moving)
    - [Future work](xe/xe_mm.md#future-work)
    - [Pagetable building](xe/xe_mm.md#pagetable-building)
  - [Map Layer](xe/xe_map.md)
  - [Migrate Layer](xe/xe_migrate.md)
    - [Special VM details](xe/xe_migrate.md#special-vm-details)
    - [Bind jobs](xe/xe_migrate.md#bind-jobs)
    - [Copy / clear jobs](xe/xe_migrate.md#copy-clear-jobs)
    - [Future work](xe/xe_migrate.md#future-work)
  - [Command submission](xe/xe_cs.md)
    - [Flow](xe/xe_cs.md#flow)
  - [Runtime Power Management](xe/xe_pm.md)
    - [Internal API](xe/xe_pm.md#internal-api)
  - [Pcode](xe/xe_pcode.md)
    - [Internal API](xe/xe_pcode.md#internal-api)
  - [GT Multicast/Replicated (MCR) Register Support](xe/xe_gt_mcr.md)
    - [Internal API](xe/xe_gt_mcr.md#internal-api)
  - [Hardware workarounds](xe/xe_wa.md)
    - [Internal API](xe/xe_wa.md#internal-api)
  - [Register Table Processing](xe/xe_rtp.md)
    - [Internal API](xe/xe_rtp.md#internal-api)
  - [Firmware](xe/xe_firmware.md)
    - [Firmware Layout](xe/xe_firmware.md#firmware-layout)
    - [Write Once Protected Content Memory (WOPCM) Layout](xe/xe_firmware.md#write-once-protected-content-memory-wopcm-layout)
    - [GuC CTB Blob](xe/xe_firmware.md#guc-ctb-blob)
    - [GuC Power Conservation (PC)](xe/xe_firmware.md#guc-power-conservation-pc)
    - [Internal API](xe/xe_firmware.md#internal-api)
  - [Multi-tile Devices](xe/xe_tile.md)
    - [Internal API](xe/xe_tile.md#internal-api)
  - [Debugging](xe/xe_debugging.md)
- [Arm Framebuffer Compression (AFBC)](afbc.md)
  - [Components and Ordering](afbc.md#components-and-ordering)
  - [Number of Planes](afbc.md#number-of-planes)
  - [Cross-device interoperability](afbc.md#cross-device-interoperability)
- [drm/komeda Arm display driver](komeda-kms.md)
  - [Overview of D71 like display IPs](komeda-kms.md#overview-of-d71-like-display-ips)
    - [Layer](komeda-kms.md#layer)
    - [Scaler](komeda-kms.md#scaler)
    - [Compositor (compiz)](komeda-kms.md#compositor-compiz)
    - [Writeback Layer (wb_layer)](komeda-kms.md#writeback-layer-wb-layer)
    - [Post image processor (improc)](komeda-kms.md#post-image-processor-improc)
    - [Timing controller (timing_ctrlr)](komeda-kms.md#timing-controller-timing-ctrlr)
    - [Merger](komeda-kms.md#merger)
    - [Splitter](komeda-kms.md#splitter)
  - [Possible D71 Pipeline usage](komeda-kms.md#possible-d71-pipeline-usage)
    - [Single pipeline data flow](komeda-kms.md#single-pipeline-data-flow)
    - [Dual pipeline with Slave enabled](komeda-kms.md#dual-pipeline-with-slave-enabled)
    - [Sub-pipelines for input and output](komeda-kms.md#sub-pipelines-for-input-and-output)
  - [Komeda Resource abstraction](komeda-kms.md#komeda-resource-abstraction)
    - [struct komeda_pipeline/component](komeda-kms.md#struct-komeda-pipeline-component)
  - [Resource discovery and initialization](komeda-kms.md#resource-discovery-and-initialization)
  - [Format handling](komeda-kms.md#format-handling)
  - [Attach komeda_dev to DRM-KMS](komeda-kms.md#attach-komeda-dev-to-drm-kms)
    - [How to map plane to Layer(input) pipeline](komeda-kms.md#how-to-map-plane-to-layer-input-pipeline)
    - [Make component/pipeline to be drm_private_obj](komeda-kms.md#make-component-pipeline-to-be-drm-private-obj)
    - [Tracking component_state/pipeline_state by drm_atomic_state](komeda-kms.md#tracking-component-state-pipeline-state-by-drm-atomic-state)
    - [komeda component validation](komeda-kms.md#komeda-component-validation)
    - [komeda_kms Abstraction](komeda-kms.md#komeda-kms-abstraction)
    - [komde_kms Functions](komeda-kms.md#komde-kms-functions)
  - [Build komeda to be a Linux module driver](komeda-kms.md#build-komeda-to-be-a-linux-module-driver)
- [drm/Panfrost Mali Driver](panfrost.md)
  - [Panfrost DRM client usage stats implementation](panfrost.md#panfrost-drm-client-usage-stats-implementation)
